@@ -86,9 +86,6 @@ struct list *create_pv_list(struct dm_pool *mem, struct volume_group *vg, int ar
 
 struct list *clone_pv_list(struct dm_pool *mem, struct list *pvs);
 
-int exec_cmd(const char *command, const char *fscmd, const char *lv_path,
-	     const char *size);
-
 int apply_lvname_restrictions(const char *name);
 
 int validate_vg_name(struct cmd_context *cmd, const char *vg_name);
