@@ -1,5 +1,6 @@
 Version 2.02.00 - 
 ===================================
+  Attempt to load missing targets using modprobe.
   Add -a to lvscan.
   Move mknodes into libdevmapper.
   Move bitset, hash, pool and dbg_malloc into libdevmapper.
